@@ -226,10 +226,10 @@ namespace Sheepy.BattleTechMod.AttackImprovementMod {
          if ( RangedFactors != null ) Info( "Ranged modifiers ({0}): {1}", RangedFactors.Count, RangedFactors );
       }
 
-      private static string smartRange ( float min, float range, float max ) {
-         if ( range-min > max-range || min <= 0 )
-            return " (<" + max + "m)";
-         return " (>" + min + "m)";
+      private static string SmartRange ( float min, float range, float max ) {
+         if ( min <= 0 || range-min > max-range )
+            return " (<" + (int) max + "m)"; // Show next range boundery when no lower boundary or target is closer to next than lower.
+         return " (>" + (int) min + "m)";
       }
 
       public static Func<AttackModifier> GetRangedModifierFactor ( string factorId ) {
@@ -240,16 +240,14 @@ namespace Sheepy.BattleTechMod.AttackImprovementMod {
          case "range":
             return () => {
                Weapon w = AttackWeapon;
-               float modifier = Hit.GetRangeModifier( w, AttackPos, TargetPos );
+               float range = Vector3.Distance( AttackPos, TargetPos ), modifier = Hit.GetRangeModifierForDist( w, range );
                AttackModifier result = new AttackModifier( modifier );
-               float range = Vector3.Distance( AttackPos, TargetPos );
-               int shownRange = (int) Math.Floor( range );
-               if ( range < w.MinRange ) return result.SetName( $"MIN RANGE (<{w.MinRange}m)" );
-               if ( range < w.ShortRange ) return result.SetName( "SHORT RANGE" + smartRange( w.MinRange, range, w.ShortRange ) );
-               if ( range < w.MediumRange ) return result.SetName( "MED RANGE" + smartRange( w.ShortRange, range, w.MediumRange ) );
-               if ( range < w.LongRange ) return result.SetName( "LONG RANGE" + smartRange( w.MediumRange, range, w.LongRange ) );
-               if ( range < w.MaxRange ) return result.SetName( "MAX RANGE" + smartRange( w.LongRange, range, w.MaxRange ) );
-               return result.SetName( $"OUT OF RANGE (>{w.MaxRange}m)" );
+               if ( range < w.MinRange ) return result.SetName( $"MIN RANGE (<{(int)w.MinRange}m)" );
+               if ( range < w.ShortRange ) return result.SetName( "SHORT RANGE" + SmartRange( w.MinRange, range, w.ShortRange ) );
+               if ( range < w.MediumRange ) return result.SetName( "MED RANGE" + SmartRange( w.ShortRange, range, w.MediumRange ) );
+               if ( range < w.LongRange ) return result.SetName( "LONG RANGE" + SmartRange( w.MediumRange, range, w.LongRange ) );
+               if ( range < w.MaxRange ) return result.SetName( "MAX RANGE" + SmartRange( w.LongRange, range, w.MaxRange ) );
+               return result.SetName( $"OUT OF RANGE (>{(int)w.MaxRange}m)" );
             };
 
          case "height":
