@@ -11,6 +11,7 @@ CHANGE LOG
 * Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
 * Fix: NPE when FacingMarkerPlayerColors is non-empty but FacingMarkerEnemyColors is empty.
 * Fix: FloatingArmorColours no longer applies to target panel and runs faster.
+* Fix: Range meter in hit modifier list won't show decimal now.
 
 2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0
 
